# pico-FreeRTOS

examples/: CMakeLists.txt
examples/EX1_Create_Task/: CMakeLists.txt  main.c
examples/Standard/: CMakeLists.txt  main.c
examples/Task_Management/: CMakeLists.txt  FreeRTOSConfig.h  ex1_create_task.c  main.c
